[workspace]
members = [
    "contracts/psp22_mintable",
    "contracts/flash_loan_receiver_mock",
    "contracts/flash_loan_contract",
    "contracts/flash_loan_simple"
]

[package]
name = "flash_loan"
version = "1.0.0"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }
ink_engine = { version = "~3.3.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { version = "~2.2.0", default-features = false, features = ["psp22", "psp34", "ownable", "pausable", "access_control"] }
# sp-core = { version = "7.0.0", default-features = false } - does not compile
primitive-types = { version = "0.12.1", default-features = false, features = ["codec"] }

# num-traits = { version = "0.2.15", default-features = false }
# itertools = { version ="0.10.5", default-features = false }

[lib]
name = "flash_loan"
path = "lib.rs"
crate-type = [
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "openbrush/std",
    "primitive-types/std",
    "primitive-types/scale-info"
]
