[package]
name = "flash_loan_simple"
version = "1.0.0"
authors = ["Konrad Wierzbik <konrad.wierzbik@gmail.com>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "~3.3.0", default-features = false }
ink_metadata = { version = "~3.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "~3.3.0", default-features = false }
ink_storage = { version = "~3.3.0", default-features = false }
ink_lang = { version = "~3.3.0", default-features = false }
ink_prelude = { version = "~3.3.0", default-features = false }
ink_engine = { version = "~3.3.0", default-features = false, optional = true }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }

# These dependencies
flash_loan = { path = "../..", default-features = false }
openbrush = { version = "~2.2.0", default-features = false, features = ["psp22"] }

[lib]
name = "flash_loan_simple"
path = "lib.rs"
crate-type = [
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    # These dependencies
    "flash_loan/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16            # Use slightly better optimizations.
overflow-checks = false 

[profile.release]
overflow-checks = false 